# yune

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  README.yue.md  README.zh-CN.md  THIRD_PARTY_NOTICES.md
.codex/agents/: spark-explorer.toml  spark-reviewer.toml  spark-worker.toml
.github/workflows/: deploy-yune-web.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/reports/: MILESTONE_SUMMARY-v1.0.md
apps/yune-web/: .gitignore  AGENTS.md  README.yune-source.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts  yune-web.lock.json
crates/yune-cli/: Cargo.toml
crates/yune-rime-api/: Cargo.toml
crates/yune-rime-api/benches/: frontend_baselines.rs  native_inprocess_benchmark.rs
crates/yune-rime-api/include/: rime_typeduck_profile_api.h  rime_yune_windows_profile_api.h
crates/yune-rime-api/src/: api_table.rs  candidate_api.rs  config.rs  config_api.rs  config_compiler.rs  context_api.rs  deployment.rs  ffi_memory.rs  key_table.rs  levers.rs  lib.rs  resource_id.rs  runtime.rs  schema_api.rs  schema_install.rs  schema_selection.rs  session.rs  tests.rs  typeduck_web.rs  userdb.rs  web_runtime.rs
crates/yune-rime-api/src/processors/: chord_composer.rs  editor.rs  key_binder.rs  mod.rs  punctuation.rs  selector.rs  speller.rs
crates/yune-rime-api/src/tests/: candidate_api.rs  config_api.rs  context_status.rs  deployment.rs  dictionary_data.rs  distribution_schema_comparison.rs  levers.rs  lifecycle_safety.rs  mod.rs  resource_id.rs  runtime.rs  schema_processors.rs  schema_selection.rs  session_api.rs  userdb.rs
crates/yune-rime-api/src/tests/schema_processors/: ascii_composer.rs  chain_punct_segmentors.rs  chord_composer.rs  editor_commit_keys.rs  editor_delete_selector_keys.rs  editor_schema.rs  key_binder.rs  navigator.rs  punctuator.rs  recognizer_speller.rs  selector.rs
crates/yune-rime-api/src/tests/schema_selection/: deferred_oracles.rs  dictionaries_translators.rs  filters_options.rs  history_translator.rs  lifecycle_switching.rs  punctuation_spelling_correction.rs  reverse_lookup_filters.rs  reverse_lookup_translator.rs  simplifier_filter.rs  translator_format_options.rs  translator_options.rs  typeduck_profile_probe.rs
crates/yune-rime-api/src/userdb/: file_store.rs  mod.rs  record.rs  recovery.rs  snapshot.rs  store.rs  sync.rs
crates/yune-rime-api/tests/: dynamic_loader.rs  frontend_client.rs  frontend_hosts.rs  native_memory_probe.rs  typeduck_profile_abi_surface.rs  typeduck_web.rs  yune_web.rs  yune_windows_profile_abi_surface.rs
crates/yune-rime-api/tests/frontend_client/: api_table_modules.rs  composition_dictionary_userdb.rs  config_values_signatures.rs  input_editing_runtime.rs  levers_userdb.rs  raw_segment_selector.rs  runtime_config_deploy.rs  schema_list.rs  speller.rs
crates/yune-rime-api/tests/frontend_hosts/: mod.rs  native_frontends.rs  yune_web.rs
docs/: CONVENTIONS.md  analysis.md  conventions.md  decisions.md  fork-parity-ledger.md  real-frontend-validation-plan.md  refactor-plan.md  requirements.md  roadmap.md  typeduck-web-adapter.md  typeduck-web-integration-findings.md  typeduck-windows-backend-requirements.md  yune-windows-contract-implementation-plan.md
fixtures/: sample-composing.json
scripts/: benchmark-native-rime-inprocess.ps1  benchmark-yune-vs-librime.ps1  capture-typeduck-jyutping.ps1  capture-upstream-jyutping-composition.ps1  capture-upstream-luna-pinyin.ps1  capture-upstream-m17-poet.ps1  capture-upstream-m18-punctuation.ps1  capture-upstream-schema.ps1  oracle-rime-probe.cs  package-typeduck-windows.ps1  package-yune-windows.ps1  typeduck-exports.txt  typeduck-wasm-build.sh  yune-vs-librime-benchmark.cs  yune-web-exports.txt  yune-web-wasm-build.sh
(+1754 files in other folders)
