[workspace]
members = [
  "crates/yune-core",
  "crates/yune-rime-api",
  "crates/yune-cli",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "BSD-3-Clause"
repository = "https://github.com/yune-ime/yune"
rust-version = "1.76"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
assigning_clones = "allow"
borrow_as_ptr = "allow"
case_sensitive_file_extension_comparisons = "allow"
cast_lossless = "allow"
cast_ptr_alignment = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
default_trait_access = "allow"
doc_markdown = "allow"
float_cmp = "allow"
fn_params_excessive_bools = "allow"
format_collect = "allow"
format_push_string = "allow"
if_not_else = "allow"
items_after_statements = "allow"
many_single_char_names = "allow"
manual_let_else = "allow"
map_unwrap_or = "allow"
match_same_arms = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
needless_pass_by_value = "allow"
needless_raw_string_hashes = "allow"
option_option = "allow"
ptr_cast_constness = "allow"
ref_as_ptr = "allow"
redundant_closure_for_method_calls = "allow"
same_length_and_capacity = "allow"
semicolon_if_nothing_returned = "allow"
similar_names = "allow"
single_match_else = "allow"
struct_excessive_bools = "allow"
too_many_lines = "allow"
unnecessary_semicolon = "allow"
unnecessary_debug_formatting = "allow"
unnecessary_wraps = "allow"
unreadable_literal = "allow"
unnested_or_patterns = "allow"
unused_self = "allow"
wildcard_imports = "allow"
zero_sized_map_values = "allow"
