[package]
name = "yune-rime-api"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
libc = "0.2"
regex = "1"
serde_json = "1"
serde_yaml = "0.9"
yune-core = { path = "../yune-core" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
memmap2 = "0.9"
rsmarisa = "0.4.2"

[dev-dependencies]
libloading = "0.8"

[lints.rust]
unsafe_code = "allow"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
assigning_clones = "allow"
borrow_as_ptr = "allow"
case_sensitive_file_extension_comparisons = "allow"
cast_lossless = "allow"
cast_ptr_alignment = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
default_trait_access = "allow"
doc_markdown = "allow"
float_cmp = "allow"
fn_params_excessive_bools = "allow"
format_collect = "allow"
format_push_string = "allow"
if_not_else = "allow"
items_after_statements = "allow"
many_single_char_names = "allow"
manual_let_else = "allow"
map_unwrap_or = "allow"
match_same_arms = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
needless_pass_by_value = "allow"
needless_raw_string_hashes = "allow"
option_option = "allow"
ptr_cast_constness = "allow"
ref_as_ptr = "allow"
redundant_closure_for_method_calls = "allow"
same_length_and_capacity = "allow"
semicolon_if_nothing_returned = "allow"
similar_names = "allow"
single_match_else = "allow"
struct_excessive_bools = "allow"
too_many_lines = "allow"
unnecessary_semicolon = "allow"
unnecessary_debug_formatting = "allow"
unnecessary_wraps = "allow"
unreadable_literal = "allow"
unnested_or_patterns = "allow"
unused_self = "allow"
wildcard_imports = "allow"
zero_sized_map_values = "allow"

[[bench]]
name = "frontend_baselines"
harness = false

[[bench]]
name = "native_inprocess_benchmark"
harness = false
